fixed wrong tidy image

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -418,7 +418,7 @@ To tidy this data, we will use `pivot_wider`, and Figure
 \@ref(fig:img-pivot-wider) details what we need to specify to use this function.
 
 ``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot_wider function", out.width="1100", fig.retina = 2}
-knitr::include_graphics("img/pivot_longer.jpeg")
+knitr::include_graphics("img/pivot_wider.jpeg")
 ```
 
 We will apply the function as detailed in Figure \@ref(fig:img-pivot-wider).
