added basic makeindex commands

--- a/index.Rmd
+++ b/index.Rmd
@@ -25,6 +25,7 @@ output:
   bookdown::pdf_book:
     includes:
       in_header: preamble.tex
+      after_body: printindex.tex
     latex_engine: xelatex
     citation_package: natbib
     keep_tex: yes
