added local link to gentoo img

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -86,7 +86,7 @@ there are distinct types of penguins in our data.
 Understanding this might help us with species discovery and classification in a data-driven
 way.
 ```{r 09-penguins, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 3, fig.width = 4, fig.cap = "Gentoo penguin. [@penguinsimage]", fig.retina = 2}
-knitr::include_graphics("https://upload.wikimedia.org/wikipedia/commons/0/00/Brown_Bluff-2016-Tabarin_Peninsula%E2%80%93Gentoo_penguin_%28Pygoscelis_papua%29_03.jpg")
+knitr::include_graphics("img/gentoo.jpg")
 ```
 
 Below we will work with `penguin_data`, a subset of 18 observations of the original data, which has already been scaled. We will discuss scaling for K-means in more detail later in this chapter.  
