removed svg figure from inference

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -81,7 +81,7 @@ In general, the process of using a sample to make a conclusion about the
 broader population from which it is taken is referred to as **statistical inference**.
 
 ```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Population versus sample", fig.retina = 2}
-knitr::include_graphics("img/population_vs_sample.svg")
+knitr::include_graphics("img/population_vs_sample.png")
 ```
 
 </center>
